--- a/src/sass/partials/subscribe.scss
+++ b/src/sass/partials/subscribe.scss
@@ -1,4 +1,5 @@
 .subscribe-section {
+    font-family: Proxima Nova Extra Condensed, Extrabold;
     background-image: url("https://imagedelivery.net/69_vwp5TEvZvAzsHMtkORA/d84fb9a9-5aa5-4a4d-edcb-6f502a066100/public");
 
     @include breakpoint(medium) {
@@ -7,7 +8,7 @@
 
     .input-container {
         p {
-            font-size: 2.7rem;
+            font-size: 3rem;
             width: 100%;
             color: #fff;
         }
@@ -22,10 +23,16 @@
                 height: 400px;
             }
 
+
             #mc_embed_signup {
                 color: #fff;
+                display: flex;
+                flex-direction: row;
                 max-width: 400px;
                 width: 100%;
+                 font-size: 2.3rem;
+                font-family: Proxima Nova Extra Condensed, Extrabold;
+
 
                 .indicates-required {
                     padding: 1rem 0;
@@ -37,9 +44,21 @@
 
                 }
 
+                .clear {
+                    input {
+                        background-color: #fff;
+                        width: 100%;
+                        max-width: 400px;
+                        color: #000000;
+                       
+
+                    }
+                }
+
                 input {
                     background-color: transparent;
-                    border: 2px solid #fff;
+                    border: 4px solid #fff;
+                    border-radius: 0;
 
                 }
             }
