--- a/src/sass/partials/videos.scss
+++ b/src/sass/partials/videos.scss
@@ -6,13 +6,7 @@
         max-width: 100%;
         max-width: 1200px;
 
-        .vid-title{
-            text-align: left;
-            padding: 2rem 0 6rem 0;
-            h2{
-                margin: 0;
-            }
-        }
+        
     }
 }
 
@@ -27,7 +21,7 @@
         background-color: #252525;
         color: #fff;
         padding: 1rem;
-        margin: 0 0 2rem 0;
+        margin: 0 0 3.5rem 0;
 
         p {
             font-size: 2.1rem;
